--- a/src/Components/Weather.scss
+++ b/src/Components/Weather.scss
@@ -127,9 +127,7 @@
   width: 80px;
   height: 80px;
   animation: spin 1s linear infinite;
-  position: absolute;
-  top: 50%;
-  left: 40%;
+  margin-top: 50px;
 }
 
 @keyframes spin {
@@ -138,5 +136,37 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 500px) {
+  .weather-cont {
+    width: 330px;
+    form {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      input {
+        width: 80%;
+      }
+    }
+
+    .img {
+      img {
+        width: 200px;
+      }
+    }
+
+    .city-name,
+    .celsius h2 {
+      font-size: 35px;
+    }
+
+    .prec {
+      p {
+        font-size: 13px;
+      }
+    }
   }
 }
